# ocr-image

./: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  make  pyproject.toml  run  stop
ocr_image/: .env  main.py
ocr_image/ai_utils/: aiutils.py
ocr_image/image_utils/: imageutils.py
ocr_image/mqtt_utils/: mqttutils.py
ocr_image/os_utils/: osutils.py
